--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,14 @@
     ViewData["Title"] = "Home Page";
 }
 
+@* @section Scripts {
+    <script type="module" src="~/dist/index.entry.js" defer></script>
+    } *@
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <button class="btn btn-primary" id="buttonShow">Sweet alert</button>
 </div>
+
+@section Modules { Home }
